package ru.warmhouse.deviceservice.model;

public enum CommandStatus {
    CREATED,
    SENT
}
