package ru.warmhouse.deviceservice.model;

public enum CommandType {
    TURN_ON,
    TURN_OFF,
    SET_TEMPERATURE
}
