package ru.warmhouse.deviceservice.model;

public enum DeviceStatus {
    NEW,
    ACTIVE,
    ERROR
}
