@startuml

title Диаграмма кода сервиса устройств

top to bottom direction

class Device {
  +UUID id
  +UUID homeId
  +String name
  +DeviceType type
  +DeviceStatus status
  +LocalDateTime createdAt
  +LocalDateTime updatedAt

  +void create()
  +void update()
  +void delete()
  +void changeStatus(DeviceStatus status)
}

class DeviceCommand {
  +UUID id
  +UUID deviceId
  +CommandType type
  +CommandStatus status
  +String parameters
  +LocalDateTime createdAt
  +LocalDateTime updatedAt

  +void create()
  +void updateStatus(CommandStatus status)
}

class DeviceState {
  +UUID deviceId
  +DeviceStateValue value
  +LocalDateTime updatedAt

  +void update(DeviceStateValue value)
}

enum DeviceType {
  CONTROL_MODULE
  SENSOR
}

enum DeviceStatus {
  NEW
  ACTIVE
  INACTIVE
  ERROR
}

enum DeviceStateValue {
  ON
  OFF
  OPEN
  CLOSED
}

enum CommandType {
  TURN_ON
  TURN_OFF
  OPEN
  CLOSE
  GET_DATA
}

enum CommandStatus {
  CREATED
  SENT
  FAILED
}

Device "1" -- "0..*" DeviceCommand : команды
Device "1" -- "0..1" DeviceState : состояние
Device "1" -- "1" DeviceType : тип
Device "1" -- "1" DeviceStatus : статус

DeviceState "1" -- "1" DeviceStateValue : значение состояния

DeviceCommand "1" -- "1" CommandType : тип команды
DeviceCommand "1" -- "1" CommandStatus : статус команды

@enduml